# Investment-Mindset-Training-Agent

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py
backend/app/db/: schema.sql  seed.sql
backend/app/models/: asset.py  base.py  cash_account.py  exchange_rate.py  income.py  price.py  transaction.py  user_setting.py
backend/app/routers/: assets.py  cash_accounts.py  health.py  income.py  market.py  metrics.py  report.py  transactions.py  user_settings.py
backend/app/schemas/: asset.py  cash_account.py  enums.py  income.py  market.py  metrics.py  report.py  transaction.py  user_setting.py
backend/app/services/: ai_commentary.py  calculators.py  email_sender.py  market_data.py  report_builder.py  scheduler.py  wealth_freedom.py
backend/tests/: conftest.py
backend/tests/test_routers/: test_asset_transactions.py  test_assets.py  test_assets_list.py  test_cash_accounts.py  test_income.py  test_market.py  test_market_refresh.py  test_metrics.py  test_report.py  test_transactions.py  test_user_settings.py
backend/tests/test_services/: test_ai_commentary.py  test_calculators.py  test_market_data.py
config/: report_preview_sample.html  report_style.json
frontend/: .env.example  eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/config/: routes.tsx
tools/: backfill_month_last_trading_day.py  backfill_today_prices.py  import_from_legacy.py  init_db.py
(+61 files in other folders)
