[project]
name = "portfolio-backend"
version = "0.1.0"
description = "FastAPI backend for personal portfolio tracking (SSOT: ../开发文档/)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
